tests/fixtures/errors/arity_violation.h
/**
 * @nb
 */
class Foo {
public:
    /**
     * @nb
     * @nb_static yes
     */
    void bar();
};
